--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ repositories {
 
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile("org.springframework.boot:spring-boot-starter-web")
-
+    runtime("com.github.danielwegener:logback-kafka-appender:0.1.0")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
