--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("net.logstash.logback:logstash-logback-encoder:4.4")
     runtime("com.github.danielwegener:logback-kafka-appender:0.1.0")
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
