--- a/build.gradle
+++ b/build.gradle
@@ -4,25 +4,39 @@ version '1.0-SNAPSHOT'
 apply plugin: "java"
 apply plugin: "spring-boot"
 
+//for maven config
+apply plugin: 'maven'
+
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
+    maven { url "http://repo.spring.io/snapshot" }
+    maven { url "http://repo.spring.io/milestone" }
+    maven { url "http://repo.spring.io/plugins-release" }
 }
 
 
+ext {
+    springBootVersion = "1.4.2.RELEASE"
+    gradlePropdepsVersion = "0.0.6"
+    logbackKafkaVersion = "0.1.0"
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-web:${springBootVersion}")
     compile("net.logstash.logback:logstash-logback-encoder:4.4")
-    runtime("com.github.danielwegener:logback-kafka-appender:0.1.0")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
+    runtime("com.github.danielwegener:logback-kafka-appender:${logbackKafkaVersion}")
+    testCompile("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
 }
 
 buildscript {
     ext {
-        springBootVersion = "1.2.3.RELEASE"
-        junitVersion = "4.11"
+        springBootVersion = "1.4.2.RELEASE"
+        gradlePropdepsVersion = "0.0.6"
+        springLoadedVersion = "1.2.0.M1"
     }
     repositories {
         mavenLocal()
@@ -33,15 +47,11 @@ buildscript {
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.springframework:springloaded:${springBootVersion}")
-        classpath("org.springframework.build.gradle:propdeps-plugin:0.0.6")
-
+        classpath("org.springframework:springloaded:${springLoadedVersion}")
+        classpath("org.springframework.build.gradle:propdeps-plugin:${gradlePropdepsVersion}")
     }
 
 }
-
-//for maven config
-apply plugin: 'maven'
 
 uploadArchives {
     repositories.mavenDeployer {
