--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,11 @@
 hs_err_pid*
 
 .idea
-build/classes/
-build/dependency-cache/
-build/tmp/compileJava/
+build/*
 gradlew*
 gradle
 .gradle
-out/
+out/*
 .tar
 .zip
 build
