--- a/build.gradle
+++ b/build.gradle
@@ -11,10 +11,6 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    jcenter()
-    maven { url "http://repo.spring.io/snapshot" }
-    maven { url "http://repo.spring.io/milestone" }
-    maven { url "http://repo.spring.io/plugins-release" }
 }
 
 
@@ -36,7 +32,7 @@ buildscript {
     ext {
         springBootVersion = "1.4.2.RELEASE"
         gradlePropdepsVersion = "0.0.6"
-        springLoadedVersion = "1.2.0.M1"
+        springLoadedVersion = "1.2.3.RELEASE"
     }
     repositories {
         mavenLocal()
