refact(build) 1.modify build.gradle about build jar name

--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,6 @@
-group 'com.demo'
-version '1.0-SNAPSHOT'
-
-apply plugin: "java"
-apply plugin: "spring-boot"
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("net.logstash.logback:logstash-logback-encoder:4.4")
-    runtime("com.github.danielwegener:logback-kafka-appender:0.1.0")
-    testCompile("org.springframework.boot:spring-boot-starter-test")
-}
-
 buildscript {
     ext {
-        springBootVersion = "1.2.3.RELEASE"
-        junitVersion = "4.11"
+        spring_boot_gradle_version = "1.2.3.RELEASE"
     }
     repositories {
         mavenLocal()
@@ -32,16 +10,46 @@ buildscript {
         maven { url "http://repo.spring.io/plugins-release" }
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.springframework:springloaded:${springBootVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${spring_boot_gradle_version}")
+        classpath("org.springframework:springloaded:${spring_boot_gradle_version}")
         classpath("org.springframework.build.gradle:propdeps-plugin:0.0.6")
 
     }
-
 }
 
+ext {
+    spring_boot_starter_version = "1.4.2.RELEASE"
+    logback_kafka_version = "0.1.0"
+    self_verion = "0.1.0-SNAPSHOT"
+}
+
+apply plugin: "java"
+apply plugin: "spring-boot"
+apply plugin: "idea"
 //for maven config
 apply plugin: 'maven'
+
+jar {
+    baseName = "springbootdemo"
+    version = "${self_verion}"
+}
+group 'com.demo'
+version "${self_verion}"
+
+repositories {
+    mavenCentral()
+}
+
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile("org.springframework.boot:spring-boot-starter-web:${spring_boot_starter_version}")
+    compile("net.logstash.logback:logstash-logback-encoder:4.4")
+    runtime("com.github.danielwegener:logback-kafka-appender:${logback_kafka_version}")
+    testCompile("org.springframework.boot:spring-boot-starter-test:${spring_boot_starter_version}")
+}
 
 uploadArchives {
     repositories.mavenDeployer {
@@ -52,3 +60,4 @@ uploadArchives {
         }
     }
 }
+
