feat(validate): 1.添加validate特性能     /**      * Bean Validation 中内置的 constraint      * @Null   被注释的元素必须为 null      * @NotNull    被注释的元素必须不为 null      * @AssertTrue     被注释的元素必须为 true      * @AssertFalse    被注释的元素必须为 false      * @Min(value)     被注释的元素必须是一个数字，其值必须大于等于指定的最小值      * @Max(value)     被注释的元素必须是一个数字，其值必须小于等于指定的最大值      * @DecimalMin(value)  被注释的元素必须是一个数字，其值必须大于等于指定的最小值      * @DecimalMax(value)  被注释的元素必须是一个数字，其值必须小于等于指定的最大值      * @Size(max=, min=)   被注释的元素的大小必须在指定的范围内      * @Digits (integer, fraction)     被注释的元素必须是一个数字，其值必须在可接受的范围内      * @Past   被注释的元素必须是一个过去的日期      * @Future     被注释的元素必须是一个将来的日期      * @Pattern(regex=,flag=)  被注释的元素必须符合指定的正则表达式      * Hibernate Validator 附加的 constraint      * @NotBlank(message =)   验证字符串非null，且长度必须大于0      * @Email  被注释的元素必须是电子邮箱地址      * @Length(min=,max=)  被注释的字符串的大小必须在指定的范围内      * @NotEmpty   被注释的字符串的必须非空      * @Range(min=,max=,message=)  被注释的元素必须在合适的范围内      */

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ ext {
     spring_boot_starter_version = "1.4.2.RELEASE"
     logback_kafka_version = "0.1.0"
     guava_version = "20.0"
+    hibernate_validator_version = "5.3.4.Final"
+    tomcat_embed_el_version = "8.5.6"
+
     self_verion = "0.1.0-SNAPSHOT"
 }
 
@@ -46,6 +49,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile("org.hibernate:hibernate-validator:${hibernate_validator_version}")
+    compile("org.apache.tomcat.embed:tomcat-embed-el:${tomcat_embed_el_version}")
+
     compile("com.google.guava:guava:${guava_version}")
     compile("org.springframework.boot:spring-boot-starter-web:${spring_boot_starter_version}")
     compile("net.logstash.logback:logstash-logback-encoder:4.4")
