--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ ext {
     guava_version = "20.0"
     hibernate_validator_version = "5.3.4.Final"
     tomcat_embed_el_version = "8.5.6"
+    springfox_swagger_verions = "2.2.2"//REST ful API文档
 
     self_verion = "0.1.0-SNAPSHOT"
 }
@@ -51,6 +52,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile("org.hibernate:hibernate-validator:${hibernate_validator_version}")
     compile("org.apache.tomcat.embed:tomcat-embed-el:${tomcat_embed_el_version}")
+
+    compile("io.springfox:springfox-swagger2:${springfox_swagger_verions}")
+    compile("io.springfox:springfox-swagger-ui:${springfox_swagger_verions}")
 
     compile("com.google.guava:guava:${guava_version}")
     compile("org.springframework.boot:spring-boot-starter-web:${spring_boot_starter_version}")
