--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,14 @@ dependencies {
     compile("io.springfox:springfox-swagger-ui:${springfox_swagger_verions}")
 
     compile("com.google.guava:guava:${guava_version}")
+    compile("org.springframework.boot:spring-boot-starter:${spring_boot_starter_version}")
     compile("org.springframework.boot:spring-boot-starter-web:${spring_boot_starter_version}")
+    compile("org.springframework.boot:spring-boot-starter-redis:${spring_boot_starter_version}")
+
+    //for logback
     compile("net.logstash.logback:logstash-logback-encoder:4.4")
     runtime("com.github.danielwegener:logback-kafka-appender:${logback_kafka_version}")
+
     testCompile("org.springframework.boot:spring-boot-starter-test:${spring_boot_starter_version}")
 }
 
