--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>springBootLearn</name>
 	<description>Demo project for Spring Boot</description>
@@ -46,5 +46,10 @@
 		</plugins>
 	</build>
 
-
+	<modules>
+		<module>eurekaService</module>
+		<module>eurekaClient</module>
+		<module>ribbon</module>
+		<module>ribbon-eureka</module>
+	</modules>
 </project>
