--- a/eurekaService/src/main/resources/application.properties
+++ b/eurekaService/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 server.port=1111
-
+spring.application.name=eureka
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://192.168.254.103:${server.port}/eureka/
 
-eureka.client.healthcheck.enabled= true
 logging.level.com.netflix.eureka=OFF
 logging.level.com.netflix.discovery=OFF
