feat(feign): 1.add feign  eureka

--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   application:
-    name: ribbon-consumer
+    name: feign-consumer
 server:
-  port: 3334
+  port: 3335
 
 eureka:
   instance:
