--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,6 @@
 		<module>ribbon-hystrix</module>
 		<module>ribbon-hystrix-eureka</module>
         <module>feign</module>
+		<module>feign-hystrix</module>
 	</modules>
 </project>
