feat(feign): 1.add feign  eureka

--- a/feign/src/main/resources/application.yml
+++ b/feign/src/main/resources/application.yml
@@ -11,3 +11,15 @@ eureka:
     registryFetchIntervalSeconds: 5
     serviceUrl:
       defaultZone: http://localhost:${eureka.port:1111}/eureka/
+
+feign:
+  histrix:
+    enabled: false
+
+hystrix:
+  command:
+    choose:
+      default:
+        execution:
+          timeout:
+            enabled: false
