--- a/eurekaClient/src/main/resources/application.yml
+++ b/eurekaClient/src/main/resources/application.yml
@@ -1,6 +1,20 @@
+debug: true
 spring:
   application:
     name: simple
+  datasource:
+    url: jdbc:mysql://localhost:3306/fate
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.jdbc.Driver
+    druid:
+      initial-size: 1
+      min-idle: 1
+      max-active: 20
+      test-on-borrow: true
+      stat-view-servlet:
+        allow: true
+
 
 server:
   port: 2000
@@ -13,3 +27,31 @@ eureka:
     fetchRegistry: true
   instance:
     hostname: localhost
+
+#mybatis
+mybatis:
+  type-aliases-package: com.example.demo.model
+  mapper-locations: classpath:mapping/*Mapper.xml
+
+#mapper
+#mappers 多个接口时逗号隔开
+mapper:
+  mappers:
+      - com.example.demo.util.MyMapper
+  not-empty: false
+  identity: MYSQL
+
+#pagehelper
+pagehelper:
+  helperDialect: mysql
+  reasonable: true
+  supportMethodsArguments: true
+  params: count=countSql
+
+logging:
+  level:
+    root: WARN
+    tk:
+      mybatis:
+        pagehelper:
+          mapper: TRACE
