--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -36,6 +37,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
@@ -55,5 +57,6 @@
 		<module>ribbon-hystrix-eureka</module>
         <module>feign</module>
 		<module>feign-hystrix</module>
+		<module>pojo</module>
 	</modules>
 </project>
