--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,8 @@
         <module>feign</module>
 		<module>feign-hystrix</module>
 		<module>pojo</module>
-	</modules>
+        <module>oauth</module>
+		<module>config-server</module>
+		<module>hystrix-dashboard</module>
+    </modules>
 </project>
