--- a/pom.xml
+++ b/pom.xml
@@ -59,5 +59,6 @@
 		<module>feign-hystrix</module>
 		<module>pojo</module>
         <module>oauth</module>
+		<module>config-server</module>
     </modules>
 </project>
