--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=7001
 
 
 spring.cloud.config.server.git.uri=https://github.com/snifferhu/springBootLearn/
-spring.cloud.config.server.git.username=xyzhu88yong@gmail.com
+spring.cloud.config.server.git.username=snifferhu
 spring.cloud.config.server.git.password=sS3106635
-spring.cloud.config.server.git.searchPaths=respo
+spring.cloud.config.server.git.searchPaths=src/main/resources
 spring.cloud.config.label=master
