feat(config): 1. config client

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,9 +1,19 @@
-spring.application.name=config-server
+spring.application.name=configServer
 server.port=7001
 
 
-spring.cloud.config.server.git.uri=https://github.com/snifferhu/springBootLearn/
-spring.cloud.config.server.git.username=snifferhu
-spring.cloud.config.server.git.password=sS3106635
+#spring.cloud.config.server.git.uri=https://github.com/snifferhu/springBootLearn/
 spring.cloud.config.server.git.searchPaths=src/main/resources
+
+#spring.cloud.config.server.git.uri=https://git.oschina.net/pkaq/spring-cloud-7simple.git
+#spring.cloud.config.server.git.searchPaths=cloud-config-repo
+
+spring.cloud.config.server.git.uri=file:C:\\Users\\GSMC\\Documents\\GitHub\\springBootLearn
+
 spring.cloud.config.label=master
+
+
+eureka.client.service-url.defaultZone=  http://127.0.0.1:${eureka.port:1111}/eureka/
+eureka.client.register-with-eureka=  true
+eureka.client.fetchRegistry= true
+eureka.client.instance.hostname= config-server
