--- a/eurekaClient/src/main/resources/application.yml
+++ b/eurekaClient/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/fate
     username: root
-    password: 123456
+    password: root123
     driver-class-name: com.mysql.jdbc.Driver
     druid:
       initial-size: 1
