--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=configServer
 server.port=8888
 
 
-spring.cloud.config.server.git.uri=https://github.com/snifferhu/springBootLearn/
-spring.cloud.config.server.git.searchPaths=config-repo
+spring.cloud.config.server.git.uri=https://github.com/snifferhu/springBootLearn.git
+spring.cloud.config.server.git.searchPaths=config-repo/configSpace
 
 #spring.cloud.config.server.git.uri=https://git.oschina.net/pkaq/spring-cloud-7simple.git
 #spring.cloud.config.server.git.searchPaths=cloud-config-repo
@@ -13,7 +13,7 @@ spring.cloud.config.server.git.searchPaths=config-repo
 spring.cloud.config.label=master
 
 # ø™∆Ù±æµÿ≈‰÷√
-spring.profiles.active=native
+#spring.profiles.active=native
 
 eureka.client.service-url.defaultZone=  http://127.0.0.1:${eureka.port:1111}/eureka/
 eureka.client.register-with-eureka=  true
