--- a/ribbon-mongodb/pom.xml
+++ b/ribbon-mongodb/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>ribbon</artifactId>
+	<artifactId>-mongodb</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>ribbon</name>
+	<name>-mongodb</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
